fix the spacing on the roster download button

--- a/sass/partials/_athletics.scss
+++ b/sass/partials/_athletics.scss
@@ -625,6 +625,10 @@
     padding-bottom: 15px;
   }
 
+  .view-header {
+    margin-left: 30px;
+  }
+
   .pane-views-panes .pane-title {
     background-color: transparent;
     background-image: none;
